# maritime-magic-vessel

./: .gitignore  DEPLOYMENT.md  MIGRATION_SUMMARY.md  QUICK_DEPLOY.md  check_names.py  debug_extract.py  debug_vessel_types.py  run_fullstack.py  test_api.py  test_api_local.py  vercel.json
api/: .env.example  index.py  requirements.txt  vercel.json
maritime_vessel_system/: .vercelignore  ADVANCED_QUERIES_IMPLEMENTATION.md  QUICKSTART.md  README.md  config.json  inspect_data.py  inspect_kg.py  pyproject.toml  requirements.txt  test_backend.py  vercel.json
maritime_vessel_system/api/: index.py
maritime_vessel_system/frontend/: .env.example  package.json  vercel.json  vite.config.js
maritime_vessel_system/frontend/src/: App.jsx
maritime_vessel_system/frontend/src/components/: ChatPanel.jsx  Dashboard.jsx  FilterPanel.jsx  GraphViewer.jsx
maritime_vessel_system/src/: __init__.py  main.py
maritime_vessel_system/src/agents/: __init__.py  multi_agent_system.py  multi_agent_system_old.py
maritime_vessel_system/src/api/: __init__.py  app.py  kg_router.py  neo4j_client.py
maritime_vessel_system/src/core/: __init__.py  eda_analysis.py
maritime_vessel_system/src/entity_resolution/: __init__.py  entity_resolver.py
maritime_vessel_system/src/knowledge_graph/: __init__.py  maritime_kg.py  ontology.py
maritime_vessel_system/src/models/: __init__.py  data_models.py
maritime_vessel_system/src/query/: __init__.py  conversational_ai.py
maritime_vessel_system/src/validation/: __init__.py  validation_pipeline.py
